dynamic table with js

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,9 @@ contact.params.lastname=Last name
 contact.params.middlename=Middle name
 contact.params.mobPhoneNumber=Mobile phone number
 
+contact.params.delete=Delete
+contact.params.update=Update
+
 errText.isExisting=User is not found!\r\n(or input data is wrong)
 errText.registration.errExist=User with this login is exist!
 errText.registration.errHomeNumber=Uncorrect home phone number format!
