--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -11,6 +11,9 @@ contact.params.lastname=Фамілія
 contact.params.middlename=По батькові
 contact.params.mobPhoneNumber=Мобільний номер
 
+contact.params.delete=Видалити
+contact.params.update=Оновити
+
 errText.isExisting=Користувач не знайдено
 errText.registration.errExist=Користувач з таким логіном уже існує
 
