add service tests, code refactoring

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,7 +26,7 @@ returnToMainPage=Return to main page
 returnToPreviousPage=Return to previous page
 
 user.params.fio=Full name
-user.params.loginName=Login
+user.params.login=Login
 user.params.password=Password
 
 user.size.fio=Enter at least 5 symbols
