--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,7 +37,7 @@ title.contactRegist=Contact registration
 title.login=User registration
 title.logout=Do you want to log out?
 title.showcontacts=All contacts
-title.update=Update user
+title.update=Update contact
 
 contact.size.email=Enter email correctly
 contact.size.homeNumber=Enter home phone number: xx-xx-xx\r\n   xxxxxx)
